fix z-index of nav

--- a/src/Grid/src/styles/main.less
+++ b/src/Grid/src/styles/main.less
@@ -82,7 +82,7 @@ label[for=darkmode-switch] {
 label.settings-label {
     position: fixed;
     top: 18px;
-    z-index: calc(@nav-z-index + 1);
+    z-index: calc(@nav-z-index - 10);
     height: 25px;
     width: 25px;
     cursor: pointer;
@@ -184,7 +184,7 @@ input.settings-input:checked {
 #settings-backdrop {
     position: fixed;
     display: block;
-    z-index: calc(@nav-z-index - 2);
+    z-index: calc(@nav-z-index - 20);
     top: @spacer-height;
     right: 0;
     width: 100%;
@@ -259,7 +259,7 @@ div.body {
         > div {
             position: fixed;
             top: 0;
-            z-index: calc(@nav-z-index - 1);
+            z-index: calc(@nav-z-index - 20);
             width: 100%;
             background-color: var(--backgroundcolor-light-trans);
             backdrop-filter: blur(10px) saturate(125%);
@@ -387,7 +387,7 @@ div.body {
             position: fixed;
             left: 15px;
             top: 15px;
-            z-index: calc(@nav-z-index + 1);
+            z-index: calc(@nav-z-index + 10);
             height: 31px;
             width: 35px;
             padding-left: 5px;
